--- a/index.rmd
+++ b/index.rmd
@@ -23,78 +23,85 @@ library(fmsb)
 library(dplyr)
 ```
 
-### Why Lofi? 
+### Away from the Lofi -> All playlists have timbre, how do they relate?
 
 ```{r}
-SAS <-
-  get_tidy_audio_analysis("1qrLuxUFn0rAGErN92uqLH") %>% # Change URI.
-  compmus_align(tatums, segments) %>%                     # Change `bars`
-  select(tatums) %>%                                      #   in all three
-  unnest(tatums) %>%                                      #   of these lines.
-  mutate(
-    pitches =
-      map(segments,
-        compmus_summarise, pitches,
-        method = "rms", norm = "euclidean"              # Change summary & norm.
-      )
-  ) %>%
+werkdag_fm2 <- get_playlist_audio_features("", "37i9dQZF1DX4bw5oBAFpuz") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+focus_modus2 <- get_playlist_audio_features("", "37i9dQZF1DWVRrbkzYIlbi") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+to_do_list2 <- get_playlist_audio_features("", "37i9dQZF1DX8sKnLLx9deI") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+calm_focused2 <- get_playlist_audio_features("", "37i9dQZF1DX9etR9S28cIo") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+maximum_concentration2 <- get_playlist_audio_features("", "37i9dQZF1DX0wdQKgYFb7Q") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+lofi_beats2 <- get_playlist_audio_features("", "37i9dQZF1DWWQRwui0ExPn") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+lofi_hiphop2 <- get_playlist_audio_features("", "37i9dQZF1DX36Xw4IJIVKA") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+lush_lofi2 <- get_playlist_audio_features("", "37i9dQZF1DXc8kgYqQLMfH") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+instrumental_study2 <- get_playlist_audio_features("", "37i9dQZF1DX9sIqqvKsjG8") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+jazz_vibes2 <- get_playlist_audio_features("", "37i9dQZF1DX0SM0LYsmbMT") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+coffee_table_jazz2 <- get_playlist_audio_features("", "37i9dQZF1DWVqfgj8NZEp1") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+deep_focus2 <- get_playlist_audio_features("", "37i9dQZF1DWZeKCadgRdKQ") %>% 
+  slice(1:30) %>% 
+  add_audio_analysis()
+```
+```{r}
+all_playlists2 <- bind_rows(
+  werkdag_fm2 %>% mutate(name = "Werkdag FM", category = "Work and Study"), 
+  focus_modus2 %>% mutate(name = "Focus Modus", category = "Concentration"), 
+  to_do_list2 %>% mutate(name = "To Do List", category = "Work and Study"), 
+  calm_focused2 %>% mutate(name = "Calm & Focused", category = "Concentration"), 
+  maximum_concentration2 %>% mutate(name = "Maximum Concentration", category = "Concentration"), 
+  lofi_beats2 %>% mutate(name = "Lofi Beats", category = "Lofi"), 
+  lofi_hiphop2 %>% mutate(name = "Lofi hip-hop", category = "Lofi"), 
+  lush_lofi2 %>% mutate(name = "Lush Lofi", category = "Lofi"), 
+  instrumental_study2 %>% mutate(name = "Instrumental study", category = "Lofi"), 
+  jazz_vibes2 %>% mutate(name = "Jazz Vibes", category = "Jazz"), 
+  coffee_table_jazz2 %>% mutate(name = "Coffee Table Jazz", category = "Jazz"), 
+  deep_focus2 %>% mutate(name = "Deep Focus", category = "Concentration"))
+```
+```{r}
+all_playlists2 %>%
   mutate(
     timbre =
-      map(segments,
-        compmus_summarise, timbre,
-        method = "rms", norm = "euclidean"              # Change summary & norm.
+      map(
+        segments,
+        compmus_summarise,
+        timbre,
+        method = "mean"
       )
-  )
-```
-
-```{r}
-SAS %>%
+  ) %>%
+  select(category, timbre) %>%
   compmus_gather_timbre() %>%
-  ggplot(
-    aes(
-      x = start + duration / 2,
-      width = duration,
-      y = basis,
-      fill = value
-    )
-  ) +
-  geom_tile() +
-  labs(x = "Time (s)", y = NULL, fill = "Magnitude", title = "Sittin' Around Smokin'") +
-  scale_fill_viridis_c() +                              
-  theme_classic()
-```
-
-***
-
-As we have seen in previous page, Lofi playlists have a particular sound, that Spotify thinks would help you with studying. I took an outlier from the Jazz Vibes playlist, which appeared to be more of a Lofi song, since it popped up in one of the Lofi playlists and the ambient, crackly sound identity was quite visible from the chromagram. This sound identity should also be visible from the timbre. That's why i select an outlier from the Lofi graph, which is Sittin' Around Smokin' by sumishii, from the playlist Lo-Fi Beats. Question is whether or not this sound identity is becoming visible from the cepstrogram and/or self-similarity matrices. 
-This cepstrogram shows quite a lot of energy in all of the timbre categories. This suggests a similar conclusion to the one the last page did; Lofi has an crackly, ambient like sound identity. Sounds are not clean, which results in a rumbly end product and can be seen in both chroma- and cepstrograms. 
-
-
-### Sittin' Around Smokin': The song compared to itself
-
-```{r}
-SAS %>%
-  compmus_self_similarity(timbre, "cosine") %>% 
-  ggplot(
-    aes(
-      x = xstart + xduration / 2,
-      width = xduration,
-      y = ystart + yduration / 2,
-      height = yduration,
-      fill = d
-    )
-  ) +
-  geom_tile() +
-  coord_fixed() +
-  scale_fill_viridis_c(guide = "none") +
+  ggplot(aes(x = basis, y = value, fill = category)) +
+  geom_violin() + 
   theme_classic() +
-  labs(x = "", y = "", title = "Sittin' Around Smokin'")
+  scale_fill_manual(values = c("#660066", "#f66d7a", "#f6a97a", "#F6e57a")) + 
+  labs(x = "Spotify Timbre Coefficients", y = "", fill = "Category")
 ```
 
 ***
 
-This page shows the Self-Similarity Matrix on Sittin' Around Smokin'. The first thing that this graph shows are the parallel diagonal lines. Listening to the song, these similarity lines can be explained. The song is constructed out of samples, or a particular sample. This sample is used in repetition throughout the song, with small interruptions by vocal ad-lib like elements. The repetition of the sample results in the diagonal lines this graphs shows. Multiple elements of the song are completely the same throughout the song. 
-This adds an element to our definition of Lofi; Ambient, crackly music, constructed of samples with a lot of repetition in it. The arrangements of Lofi songs are therefore rather simple. I suppose this simpleness is an important aspect for Spotify to adapt it in a study/work playlist folder. The repetitiveness and absence of extreme sounds suggest a calm listenning experience and could therefore improve cognitive abilities, according to Spotify. 
+The graph on the left shows the dispersion of the timbre coefficients among the 4 categories of playlists. For computing reasons all playlists have been brought back to the first 30 songs of the playlist. The dispersion of the different playlists among the coefficients is relatively the same. However, the Concentration and Lofi categories have major dispersions in C02. The playlists from the Concentration and Lofi categories have proven to be correlative before. As the graph in the second slide showed, concerning energy and valence. The rest of this graph also shows that. The dispersions of the 2 categories are the most alike among the other playlists' dispersions. This is clear through most of the other coefficients. 
+I believe Spotify use moderately the same steps for forming Concentration playlists as for Lofi playlists. Soundwise they are both calm, low in volume and apparently easy on the timbre. I think these aspects of music could work for people listening to the music while working or studying. The arrangement of musical aspects in a playlist like these could result in less distraction while working, where jazz or pop-ish playlists, because of timbral tension, high energy levels and high loudness, could result in a higher level of distraction. 
 
 ### 2020: What is the best music to be listening to, working from home?
 
@@ -220,6 +227,80 @@ mujer %>%
 
 One particular outlier is the song Mujer by RLLBTS and Golden Ticket Tapes. This song has a valence of 0.9930 and energy level of 0.83400. Both rather high levels for the majority in the Jazz Vibes playlist. The graph on the right shows the chromagram of this particular song. In this visualization of the pitch classes in this rather short song, there are clear concentrations of energy on D, Eb, F and G. Besides these pitch classes, there is a lot of noise in all the other pitch classes. This chromagram can be better understood when the song is being listened to; the accents on the snare and hi-hats are probably the accents on F and G, since they are relatively stable sounds and are constant throughout the song. Also, around 60 seconds in to the song, some kind of under water-phaser effect is used. Here the drum hits are silent, which is clearly cisible in the chromagram. All the rubbish going on in the other pitch classes is a result of the samples used for this song. Multiple samples play at the same time during the song. These samples were either pulled from  vinyl or processed to sound like they have been. Because of that, the chromagram shows a lot of dispersed energy among pitch classes. The samples are not clean. 
 This does contribute to the song however, the identity of this song suggests an ambient-like, crackly atmosphere. Which is also something that could be said about the Lofi playlists. This is not very surprising, since one of the artists, Golden Ticket Tapes, has got songs in both the Lofi Hip-Hop and the Lo-Fi Beats playlist. 
+
+### Why Lofi? 
+
+```{r}
+SAS <-
+  get_tidy_audio_analysis("1qrLuxUFn0rAGErN92uqLH") %>% # Change URI.
+  compmus_align(tatums, segments) %>%                     # Change `bars`
+  select(tatums) %>%                                      #   in all three
+  unnest(tatums) %>%                                      #   of these lines.
+  mutate(
+    pitches =
+      map(segments,
+        compmus_summarise, pitches,
+        method = "rms", norm = "euclidean"              # Change summary & norm.
+      )
+  ) %>%
+  mutate(
+    timbre =
+      map(segments,
+        compmus_summarise, timbre,
+        method = "rms", norm = "euclidean"              # Change summary & norm.
+      )
+  )
+```
+
+```{r}
+SAS %>%
+  compmus_gather_timbre() %>%
+  ggplot(
+    aes(
+      x = start + duration / 2,
+      width = duration,
+      y = basis,
+      fill = value
+    )
+  ) +
+  geom_tile() +
+  labs(x = "Time (s)", y = NULL, fill = "Magnitude", title = "Sittin' Around Smokin'") +
+  scale_fill_viridis_c() +                              
+  theme_classic()
+```
+
+***
+
+As we have seen in previous page, Lofi playlists have a particular sound, that Spotify thinks would help you with studying. I took an outlier from the Jazz Vibes playlist, which appeared to be more of a Lofi song, since it popped up in one of the Lofi playlists and the ambient, crackly sound identity was quite visible from the chromagram. This sound identity should also be visible from the timbre. That's why i select an outlier from the Lofi graph, which is Sittin' Around Smokin' by sumishii, from the playlist Lo-Fi Beats. Question is whether or not this sound identity is becoming visible from the cepstrogram and/or self-similarity matrices. 
+This cepstrogram shows quite a lot of energy in all of the timbre categories. This suggests a similar conclusion to the one the last page did; Lofi has an crackly, ambient like sound identity. Sounds are not clean, which results in a rumbly end product and can be seen in both chroma- and cepstrograms. 
+
+
+
+### Sittin' Around Smokin': The song compared to itself
+
+```{r}
+SAS %>%
+  compmus_self_similarity(timbre, "cosine") %>% 
+  ggplot(
+    aes(
+      x = xstart + xduration / 2,
+      width = xduration,
+      y = ystart + yduration / 2,
+      height = yduration,
+      fill = d
+    )
+  ) +
+  geom_tile() +
+  coord_fixed() +
+  scale_fill_viridis_c(guide = "none") +
+  theme_classic() +
+  labs(x = "", y = "", title = "Sittin' Around Smokin'")
+```
+
+***
+
+This page shows the Self-Similarity Matrix on Sittin' Around Smokin'. The first thing that this graph shows are the parallel diagonal lines. Listening to the song, these similarity lines can be explained. The song is constructed out of samples, or a particular sample. This sample is used in repetition throughout the song, with small interruptions by vocal ad-lib like elements. The repetition of the sample results in the diagonal lines this graphs shows. Multiple elements of the song are completely the same throughout the song. 
+This adds an element to our definition of Lofi; Ambient, crackly music, constructed of samples with a lot of repetition in it. The arrangements of Lofi songs are therefore rather simple. I suppose this simpleness is an important aspect for Spotify to adapt it in a study/work playlist folder. The repetitiveness and absence of extreme sounds suggest a calm listenning experience and could therefore improve cognitive abilities, according to Spotify. 
 
 ### The meaning of it all: wat works and what does not?
 
