--- a/index.rmd
+++ b/index.rmd
@@ -14,38 +14,37 @@ remotes::install_github('jaburgoyne/compmus')
 
 ```{r setup}
 library(tidyverse)
-library(spotifyr)
+library(tidymodels)
+library(ggdendro)
+library(protoclust)
 library(plotly)
-library(ggplot2)
+library(heatmaply)
+library(viridis)
+library(viridisLite)
+library(kknn)
 library(compmus)
+library(spotifyr)
+library(ggplot2)
 library(knitr)
 library(fmsb)
 library(dplyr)
+
+get_conf_mat <- function(fit) {
+  outcome <- .get_tune_outcome_names(fit)
+  fit %>% 
+    collect_predictions() %>% 
+    conf_mat(truth = outcome, estimate = .pred_class)
+}  
+
+get_pr <- function(fit) {
+  fit %>% 
+    conf_mat_resampled() %>% 
+    group_by(Prediction) %>% mutate(precision = Freq / sum(Freq)) %>% 
+    group_by(Truth) %>% mutate(recall = Freq / sum(Freq)) %>% 
+    ungroup() %>% filter(Prediction == Truth) %>% 
+    select(class = Prediction, precision, recall)
+}  
 ```
-
-### Rhythmical analysis of the working from home playlists; is there correlation?
-
-```{r}
-dovidenja <- get_tidy_audio_analysis("71Hs7PGCNa1466R9Wiobo0")
-
-dovidenja %>%
-  tempogram(window_size = 8, hop_size = 1, cyclic = TRUE) %>%
-  ggplot(aes(x = time, y = bpm, fill = power)) +
-  geom_raster() +
-  scale_fill_viridis_c(guide = "none") +
-  labs(x = "Time (s)", y = "Tempo (BPM)", title = "Tempogram Dovidenja") +
-  theme_classic()
-```
-
-***
-As the graph in slide 2 shows, the Maximum Concentration playlist contains 1 song with a valence level of 0.0000 and an energy level of 0.0181. This song appears to be underneath most energy levels of the rest of the songs in the playlists, which is around 0.035. This is the song Dovidenja by Darija Horvat (The outlier in the graph on Instrumental Study is actually the same song). The song is a piece for piano and very calm in the musical events in the song. On the left, you see Spotify's attempt to show the tempo throughout the song. An important note to make is that this song is played in a time signature of 6/8. Listening to the song the tempogram is quite easy to interpret.
-
-The song consists of a stable rhythmical part by both left and right hand. The differences between the dispersed tempo parts and the (more or les) stabilized at 100 BPM parts is not particularly clear when listening to the song. I suspect that the dispersion around 5 seconds starts because of a small, syncopated rhythm in the piano. I feel like the small part messes up the observation of the tempo by Spotify. I think this mess-up keeps on until 25 seconds. At the end of these 20 seconds it seems the song only plays half a bar, which results in another mess-up in the right direction; back to 100 BPM. 
-Between 25 and 55 seconds the song becomes less rhythmical and near the 50 seconds it's just chords. That's why the tempo is so strongly defined at 100 BPM around those parts. 
-Then, between 55 and 80 seconds the song is very syncopated again and a clear tempo can't be determined. It feels in a way like a repetition of the first syncopated rhythm between 5 and 25 seconds. However i would need the score to know this for sure. 
-In the last 5 seconds the tempogram shows a big blur with no clear tempo. This is because these last 5 seconds are the result of the piano slowing down in the song and sustaining the last few notes these last 5 seconds. During this sustained chord there is no such thing as rhythm, so it is quite logically that Spotify can't find a proper tempo for this part.
-
-What does seem particular about this song is that the Spotify features function labels this song with a tempo of 0.000 BPM. I think the high level of dispersion of the song and the different parts in the song result in a difficult to determine tempo and Spotify just states it as 0. It's interesting to find out how the algorhythms behind Spotify actually work.
 
 ### 2020: What is the best music to be listening to, working from home?
 
@@ -91,7 +90,7 @@ all_playlists <- bind_rows(
   lofi_beats %>% mutate(name = "Lofi Beats", category = "Lofi"), 
   lofi_hiphop %>% mutate(name = "Lofi hip-hop", category = "Lofi"), 
   lush_lofi %>% mutate(name = "Lush Lofi", category = "Lofi"), 
-  instrumental_study %>% mutate(name = "Instrumental study", category = "Lofi"), 
+  instrumental_study %>% mutate(name = "Instrumental study", category = "Work and Study"), 
   jazz_vibes %>% mutate(name = "Jazz Vibes", category = "Jazz"), 
   coffee_table_jazz %>% mutate(name = "Coffee Table Jazz", category = "Jazz"), 
   deep_focus %>% mutate(name = "Deep Focus", category = "Concentration"))
@@ -135,8 +134,50 @@ ggplotly(plot1)
 
 ***
 
-The graphs on the left show all the energy and valence levels according to Spotifys API. The playlists are categorized as stated in the previous page. What mainly becomes clear is that Spotify builds playlists for concentration around songs with low energy and low valence levels. In a cautious way you could say the same about the Jazz playlists. However, the songs are more scattered in the plot. The Lofi playlists ar generally low in energy, but more differing when it comes to valence. About the Work and Study playlists nothing really conclusive can be said. Maybe that the songs from To Do List are generally lower in Valence than the songs from Werkdag FM.
+The graphs on the left show all the energy and valence levels on respectively the y and x-axis according to Spotifys API. The playlists are categorized as stated in the previous page. What mainly becomes clear is that Spotify builds playlists for concentration around songs with low energy and low valence levels. In a cautious way you could say the same about the Jazz playlists. However, the songs are more scattered in the plot. The Lofi playlists ar generally low in energy, but more differing when it comes to valence. About the Work and Study playlists nothing really conclusive can be said. Maybe that the songs from To Do List are generally lower in Valence than the songs from Werkdag FM.
+What stands out generally is that the actual Work and Study playlists are more dispersed in nature, they are not necessarily grouped by either energy or valence. It seems to be a little higher in energy. 
+Playlists that are used during working (from home) are usually associated with calmth and the absence of distraction. However, the actual work and study playlist don't prove such assumptions.
+Further on i will look at outliers from all the playlists to try and say more about their identity within these playlists. 
 
+### Other features: What's important in music while working?
+```{r}
+plot10 <- ggplot(
+  all_playlists, aes(
+    x = instrumentalness, 
+    fill = name
+  )
+) + 
+  geom_histogram(binwidth = 0.01) + 
+   scale_x_continuous(
+    limits = c(0, 1), 
+    breaks = c(0, 0.50, 1), 
+    minor_breaks = NULL) + 
+  scale_y_continuous(
+    limits = c(0, 100), 
+    breaks = c(0, 25, 50, 75, 100), 
+    minor_breaks = NULL
+    ) +
+  facet_wrap(~category) + 
+  scale_colour_brewer(
+    type = "qual", 
+    palette = 3
+    ) + 
+  theme_light() + 
+  labs(
+    x = "Instrumentalness", 
+    y = "Count", 
+    colour = "Name"
+    ) 
+
+ggplotly(plot10)
+```
+
+***
+
+The histogram on the left shows the count of different levels of instrumentalness in the playlists. What stands out is that most songs have rather high general instrumentalness levels, and that the Work and Study playlists don't contatin too much songs. Within the Work and Study playlists, "To Do List" shows a similar general high level of instrumentalness, but the other playlist "Werkdag FM" shows really low to no levels of instrumentalness. 
+It seems that this instrumentalness thing is an important attribute to Spotify. Appearantly they believe that instrumental music can enhance working abilities. I would gues that the presence of a (singing) voice could distract you from speaking yourself/typing/reading or any other verbal task that comes with working. 
+If it's not instrumental music you want to listen to, you are bound to choose the "Werkdag FM" playlist. Whihc consists of rather high energy pop songs. I guess familiarity could be an important attribute. When you know or recognize the songs in the playlists, they will seem less distracting to you and could enhance your workflow. 
+The importance of this instrumentalness attribute will be further investigated among genres. 
 
 ### The "Lady" in the sheets: What makes Mujer an outlier in Jazz Vibes?
 
@@ -171,6 +212,13 @@ mujer %>%
 
 One particular outlier is the song Mujer by RLLBTS and Golden Ticket Tapes. This song has a valence of 0.9930 and energy level of 0.83400. Both rather high levels for the majority in the Jazz Vibes playlist. The graph on the right shows the chromagram of this particular song. In this visualization of the pitch classes in this rather short song, there are clear concentrations of energy on D, Eb, F and G. Besides these pitch classes, there is a lot of noise in all the other pitch classes. This chromagram can be better understood when the song is being listened to; the accents on the snare and hi-hats are probably the accents on F and G, since they are relatively stable sounds and are constant throughout the song. Also, around 60 seconds in to the song, some kind of under water-phaser effect is used. Here the drum hits are silent, which is clearly cisible in the chromagram. All the rubbish going on in the other pitch classes is a result of the samples used for this song. Multiple samples play at the same time during the song. These samples were either pulled from  vinyl or processed to sound like they have been. Because of that, the chromagram shows a lot of dispersed energy among pitch classes. The samples are not clean. 
 This does contribute to the song however, the identity of this song suggests an ambient-like, crackly atmosphere. Which is also something that could be said about the Lofi playlists. This is not very surprising, since one of the artists, Golden Ticket Tapes, has got songs in both the Lofi Hip-Hop and the Lo-Fi Beats playlist. 
+
+```{=html}
+<object data="https://open.spotify.com/embed/track/2Gy9GSpzX1axKwHENYDBdw" width="280" height="140">
+    <embed src="https://open.spotify.com/embed/track/2Gy9GSpzX1axKwHENYDBdw" width="280" height="140"></embed>
+</object>
+```
+
 
 ### Why Lofi? 
 
@@ -215,8 +263,15 @@ SAS %>%
 
 ***
 
-As we have seen in previous page, Lofi playlists have a particular sound, that Spotify thinks would help you with studying. I took an outlier from the Jazz Vibes playlist, which appeared to be more of a Lofi song, since it popped up in one of the Lofi playlists and the ambient, crackly sound identity was quite visible from the chromagram. This sound identity should also be visible from the timbre. That's why i select an outlier from the Lofi graph, which is Sittin' Around Smokin' by sumishii, from the playlist Lo-Fi Beats. Question is whether or not this sound identity is becoming visible from the cepstrogram and/or self-similarity matrices. 
+As we have seen in previous page, Lofi playlists have a particular sound, that Spotify thinks would help you with studying. I took an outlier from the Jazz Vibes playlist, which appeared to be more of a Lofi song, since it popped up in one of the Lofi playlists and the ambient, crackly sound identity was quite visible from the chromagram. I took this song because iw tried to find This sound identity should also be visible from the timbre. That's why i select an outlier from the Lofi graph, which is Sittin' Around Smokin' by sumishii, from the playlist Lo-Fi Beats. Question is whether or not this sound identity is becoming visible from the cepstrogram and/or self-similarity matrices. 
 This cepstrogram shows quite a lot of energy in all of the timbre categories. This suggests a similar conclusion to the one the last page did; Lofi has an crackly, ambient like sound identity. Sounds are not clean, which results in a rumbly end product and can be seen in both chroma- and cepstrograms. 
+
+```{=html}
+<object data="https://open.spotify.com/embed/track/1qrLuxUFn0rAGErN92uqLH" width="280" height="140">
+    <embed src="https://open.spotify.com/embed/track/1qrLuxUFn0rAGErN92uqLH" width="280" height="140"></embed>
+</object>
+```
+
 
 
 
@@ -245,23 +300,6 @@ SAS %>%
 
 This page shows the Self-Similarity Matrix on Sittin' Around Smokin'. The first thing that this graph shows are the parallel diagonal lines. Listening to the song, these similarity lines can be explained. The song is constructed out of samples, or a particular sample. This sample is used in repetition throughout the song, with small interruptions by vocal ad-lib like elements. The repetition of the sample results in the diagonal lines this graphs shows. Multiple elements of the song are completely the same throughout the song. 
 This adds an element to our definition of Lofi; Ambient, crackly music, constructed of samples with a lot of repetition in it. The arrangements of Lofi songs are therefore rather simple. I suppose this simpleness is an important aspect for Spotify to adapt it in a study/work playlist folder. The repetitiveness and absence of extreme sounds suggest a calm listenning experience and could therefore improve cognitive abilities, according to Spotify. 
-
-### The meaning of it all: wat works and what does not?
-
-
-***
-
-Spotify has once again succeeded in forming playlists with corresponding features. I wonder however whether or not the playlists contribute to a better environment while working or studying. Spotify clearly sees a couple of ways in which the playlists could help: The music is instrumental and low in energy(Calm & Focused, Deep Focus, Focus Modus, Instrumental Study and Maximum Concentration), or the music is a bunch of samples, crackling ambiently into your brain (Jazz Vibes, Lofi Beats, Lofi Hip-Hop, Lush Lofi), Jazz music in general(Coffe Table Jazz) or the music is just feel good pop songs that are easy on the ear and not to pungent in their arrangements(To Do List, Werkdag FM). Coming weeks i will further investigate whether any of these aspects contribute to concentration, study or work in general. 
-
-
-
-
-
-
-
-
-
-
 
 ### Away from the Lofi -> All playlists have timbre, how do they relate?
 
@@ -313,7 +351,7 @@ all_playlists2 <- bind_rows(
   lofi_beats2 %>% mutate(name = "Lofi Beats", category = "Lofi"), 
   lofi_hiphop2 %>% mutate(name = "Lofi hip-hop", category = "Lofi"), 
   lush_lofi2 %>% mutate(name = "Lush Lofi", category = "Lofi"), 
-  instrumental_study2 %>% mutate(name = "Instrumental study", category = "Lofi"), 
+  instrumental_study2 %>% mutate(name = "Instrumental study", category = "Work and Study"), 
   jazz_vibes2 %>% mutate(name = "Jazz Vibes", category = "Jazz"), 
   coffee_table_jazz2 %>% mutate(name = "Coffee Table Jazz", category = "Jazz"), 
   deep_focus2 %>% mutate(name = "Deep Focus", category = "Concentration"))
@@ -340,5 +378,45 @@ all_playlists2 %>%
 
 ***
 
-The graph on the left shows the dispersion of the timbre coefficients among the 4 categories of playlists. For computing reasons all playlists have been brought back to the first 30 songs of the playlist. The dispersion of the different playlists among the coefficients is relatively the same. However, the Concentration and Lofi categories have major dispersions in C02. The playlists from the Concentration and Lofi categories have proven to be correlative before. As the graph in the second slide showed, concerning energy and valence. The rest of this graph also shows that. The dispersions of the 2 categories are the most alike among the other playlists' dispersions. This is clear through most of the other coefficients. 
+The graph on the left shows the dispersion of the timbre coefficients among the 4 categories of playlists. For computing reasons all playlists have been brought back to the first 30 songs of the playlist. The dispersion of the different playlists among the coefficients is relatively the same. However, the Concentration and Lofi categories have major dispersions in C02. C02 is an indicator for low frequencies or darkness in the timbral identity of songs. The dispersion in the Concentration and Lofi categories could be linked to the diversity of different genres in the concentration playlist and the high use of low frequencies in the Lofi genre. The playlists from the Concentration and Lofi categories have also proven to be correlative before, as the graph in the second slide showed, concerning energy and valence. The rest of this graph also shows that. The dispersions of the 2 categories are the most alike among the other playlists' dispersions. This is clear through most of the other coefficients. 
 I believe Spotify use moderately the same steps for forming Concentration playlists as for Lofi playlists. Soundwise they are both calm, low in volume and apparently easy on the timbre. I think these aspects of music could work for people listening to the music while working or studying. The arrangement of musical aspects in a playlist like these could result in less distraction while working, where jazz or pop-ish playlists, because of timbral tension, high energy levels and high loudness, could result in a higher level of distraction. 
+
+### Rhythmical analysis of the working from home playlists; is there correlation?
+
+```{r}
+dovidenja <- get_tidy_audio_analysis("71Hs7PGCNa1466R9Wiobo0")
+
+dovidenja %>%
+  tempogram(window_size = 8, hop_size = 1, cyclic = TRUE) %>%
+  ggplot(aes(x = time, y = bpm, fill = power)) +
+  geom_raster() +
+  scale_fill_viridis_c(guide = "none") +
+  labs(x = "Time (s)", y = "Tempo (BPM)", title = "Tempogram Dovidenja") +
+  theme_classic()
+```
+
+```{=html}
+<object data="https://open.spotify.com/embed/track/71Hs7PGCNa1466R9Wiobo0" width="280" height="140">
+    <embed src="https://open.spotify.com/embed/track/71Hs7PGCNa1466R9Wiobo0" width="280" height="140"></embed>
+</object>
+```
+***
+As the graph in slide 2 shows, the Maximum Concentration playlist contains 1 song with a valence level of 0.0000 and an energy level of 0.0181. This song appears to be underneath most energy levels of the rest of the songs in the playlists, which is around 0.035. This is the song Dovidenja by Darija Horvat (The outlier in the graph on Instrumental Study is actually the same song). The song is a piece for piano and very calm in the musical events in the song. On the left, you see Spotify's attempt to show the tempo throughout the song. An important note to make is that this song is played in a time signature of 6/8. Listening to the song the tempogram is quite easy to interpret.
+
+The song consists of a stable rhythmical part by both left and right hand. The differences between the dispersed tempo parts and the (more or les) stabilized at 100 BPM parts is not particularly clear when listening to the song. I suspect that the dispersion around 5 seconds starts because of a small, syncopated rhythm in the piano. I feel like the small part messes up the observation of the tempo by Spotify. I think this mess-up keeps on until 25 seconds. At the end of these 20 seconds it seems the song only plays half a bar, which results in another mess-up in the right direction; back to 100 BPM. 
+Between 25 and 55 seconds the song becomes less rhythmical and near the 50 seconds it's just chords. That's why the tempo is so strongly defined at 100 BPM around those parts. 
+Then, between 55 and 80 seconds the song is very syncopated again and a clear tempo can't be determined. It feels in a way like a repetition of the first syncopated rhythm between 5 and 25 seconds. However i would need the score to know this for sure. 
+In the last 5 seconds the tempogram shows a big blur with no clear tempo. This is because these last 5 seconds are the result of the piano slowing down in the song and sustaining the last few notes these last 5 seconds. During this sustained chord there is no such thing as rhythm, so it is quite logically that Spotify can't find a proper tempo for this part.
+
+What does seem particular about this song is that the Spotify features function labels this song with a tempo of 0.000 BPM. I think the high level of dispersion of the song and the different parts in the song result in a difficult to determine tempo and Spotify just states it as 0. It's interesting to find out how the algorhythms behind Spotify actually work.
+
+### The meaning of it all: wat works and what does not?
+![Working From Home for some people](jeshoots-com--2vD8lIhdnw-unsplash.jpg)
+
+***
+Spotify has once again succeeded in forming playlists with corresponding features. I wonder however whether or not the playlists contribute to a better environment while working or studying. Spotify clearly sees a couple of ways in which the playlists could help: The music is instrumental and low in energy(Calm & Focused, Deep Focus, Focus Modus, Instrumental Study and Maximum Concentration), or the music is a bunch of samples, crackling ambiently into your brain (Jazz Vibes, Lofi Beats, Lofi Hip-Hop, Lush Lofi), Jazz music in general(Coffe Table Jazz) or the music is just feel good pop songs that are easy on the ear and not to pungent in their arrangements(To Do List, Werkdag FM). 
+It's hard to form concrete conclusions from this portfolio. First of all working from home is a rather vague way of working; it's not thát different from working at the office, at least for Spotify. They just applied a current theme to already existing playlists; hence the Working From Home folder.
+Realizing this, and therefore treating the playlists as just work or study playlists in general, conclusions can be formed a lot easier. 
+For one of these conclusions we do have to use the Working From Home folder; it is of course a collection of what Spotify thinks is the best music for working or studying. 
+As we have seen, instrumentalness is the most important attribute of working playlists for Spotify. Bu familiarity also seems to be an important point. Considering timbre, not a lot can be said about this data, the same goes for chroma features. 
+In the end i think personal preference is way more important for an improvement of workflow than the playlists Spotify forms for us. Music you like can result in a better mood and a better mood can result in getting more work done. 
